# CFDexample

./: .gitignore  CMakeLists.txt  CMakeSettings.json  bound.c  bound.cpp  chemdata.h  comm.h  comm.hpp  end.c  end.cpp  flux.c  flux.cpp  grid2D.c  grid2D.cpp  jobbody.c  jobbody.cpp  main.c  main.cpp  mpi.h  read.c  read.cpp  readme.md  run.bat  run.sh  save.c  save.cpp  set.c  set.cpp  start.c  start.cpp  thermochem.c  thermochem.cpp  tmarch.c  tmarch.cpp  vflux.c  vflux.cpp
Cavity/: CMakeLists.txt
Plate/: CMakeLists.txt
Tube/: CMakeLists.txt
